set social & change to base templates

--- a/index.html
+++ b/index.html
@@ -12,27 +12,28 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/slick.css">
-	<title>Author</title>
+	<title>Javad Gheisari</title>
 </head>
 <body>
 
 	<!-- Navigation -->
 	<nav class="site-navigation">
 		<div class="site-navigation-inner site-container">
-            <img src="./images/site-logo.png" alt="site logo">
             <div class="social-icons">
-                <a href="www.instagram.com/javad.gheisarii" target="_blank"><img src="./images/social-instagram.png" alt="social icon"></a>
-                <a href="www.javad.gheisari@gmail.com" target="_blank"><img src="./images/social-email.png" alt="social icon"></a>
-                <a href="www.github.com/javadgheisari" target="_blank"><img src="./images/social-github.png" alt="social icon"></a>
-                <a href="t.me/mo_pro" target="_blank"><img src="./images/social-telegram.png" alt="social icon"></a>
+                <a href="../www.instagram.com/javad.gheisarii" target="_blank"><img src="./images/social-instagram.png" alt="social icon"></a>
+                <a href="../www.javad.gheisari@gmail.com" target="_blank"><img src="./images/social-email.png" alt="social icon"></a>
+                <a href="../www.github.com/javadgheisari" target="_blank"><img src="./images/social-github.png" alt="social icon"></a>
+                <a href="../t.me/mo_pro" target="_blank"><img src="./images/social-telegram.png" alt="social icon"></a>
             </div>
 			<div class="main-navigation">
 				<ul class="main-navigation__ul">
-					<li><a href="#">Homepage</a></li>
-					<li><a href="#">Page 1</a></li>
-					<li><a href="#">Page 2</a></li>
-					<li><a href="#">Page 3</a></li>
-					<li><a href="#">Page 4</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="../https://atbox.io/javadgheisari/resume/pdf">My resume</a></li>
+					<li><a href="../https://medium.com/@javad.gheisarii">blog (english)</a></li>
+					<li><a href="../https://virgool.io/@javad.gheisarii">blog (persian)</a></li>
+					<!-- <li><a href="#about_me">About me</a></li> -->
+					<!-- <li><a href="#blog">Blog</a></li>
+					<li><a href="#quotes">Quotes</a></li> -->
 				</ul>
 			</div>
 			<div id="myBtn" class="burger-container" onclick="myFunction(this)">
@@ -63,17 +64,17 @@
 				</div>
 				<div class="top-banner__text-down">
 					<h2 class="top-banner__h2">Gheisari</h2>
-					<span class="brand-span">Developer, Writer, Trader</span>
+					<span class="brand-span">Web Developer, Trader</span>
 				</div>
 				<p>Never Give Up!</p>
-				<a href="#" class="brand-button"> My Resume </a>
+				<a href="../https://atbox.io/javadgheisari/resume/pdf" class="brand-button"> My Resume </a>
 			</div>
 		</div>
 	</section>
 	<!-- Top banner end -->
 
 	<!-- About me -->
-	<section class="fh5co-about-me">
+	<section class="fh5co-about-me" id="about_me">
 		<div class="about-me-inner site-container">
 			<article class="portfolio-wrapper">
 				<div class="portfolio__img">
@@ -91,15 +92,21 @@
 				<div class="about-me-slider">
 					<div class="about-me-single-slide">
 						<h2 class="universal-h2 universal-h2-bckg">About me</h2>
-						<p><span>H</span> e has work appearing or forthcoming in over a dozen venues, including Buzzy Mag, The Spirit of Poe, and the British Fantasy Society journal Dark Horizons. He is also CEO of a company, specializing in custom book publishing and social media marketing services, have created a community for authors to learn and connect.He has work appearing or forthcoming in over a dozen venues, including Buzzy Mag, The Spirit of Poe, and have created a community for authors to learn and connect.</p>
-						<h4>Author</h4>
-						<p class="p-white">See me</p>
+						<br>
+						<p><span>A</span> n ambitious solver of problems from Iran-tehran.</p>
+						<p>Focused on web development with django. Interested in blockchain and artificial intelligence.
+							<br>Python is my favorite language and I believe that anything can be done with Python :)</p>
+						<!-- <h4>Author</h4> -->
+						<!-- <p class="p-white">See me</p> -->
 					</div>
 					<div class="about-me-single-slide">
-						<h2 class="universal-h2 universal-h2-bckg">About me 2</h2>
-						<p><span>H</span> e has work appearing or forthcoming in over a dozen venues, including Buzzy Mag, The Spirit of Poe, and the British Fantasy Society journal Dark Horizons. He is also CEO of a company, specializing in custom book publishing and social media marketing services, have created a community for authors to learn and connect.He has work appearing or forthcoming in over a dozen venues, including Buzzy Mag, The Spirit of Poe, and have created a community for authors to learn and connect.</p>
-						<h4>Author</h4>
-						<p class="p-white">See me</p>
+						<h2 class="universal-h2 universal-h2-bckg">My blog</h2>
+						<br>
+						<br>
+						<br>
+						<br>
+						<a href="../https://medium.com/@javad.gheisarii" class="brand-button"><br> English blog <br><br></a>
+						<a href="../https://virgool.io/@javad.gheisarii" class="brand-button"><br> Persian blog  <br><br></a>
 					</div>
 				</div>
 			</div>
@@ -141,7 +148,7 @@
 	<!-- Counter -->
 
 	<!-- Blog -->
-	<section class="fh5co-blog">
+	<!-- <section class="fh5co-blog" id="blog">
 		<div class="site-container">
 			<h2 class="universal-h2 universal-h2-bckg">My Blog</h2>
 			<div class="blog-slider blog-inner">
@@ -150,9 +157,9 @@
 						<img src="./images/blog1.jpg" alt="blog image">
 					</div>
 					<div class="single-blog__text">
-						<h4>The Journey Under the Waves</h4>
-						<span>On August 28, 2015</span>
-						<p>Quisque vel sapi nec lacus adipis cing bibendum nullam porta lites laoreet aliquam.velitest, tempus a ullamcorper et, lacinia mattis mi. Cras arcu nulla, blandit id cursus et, ultricies eu leo.</p>
+						<h4>What is Git?</h4>
+						<span>On December 30, 2020</span>
+						<p><b>Git</b> is a free, open-source distributed version control system. It keeps track of projects and files as they change over time with the help of different contributors.</p>
 					</div>
 				</div>
 				<div class="single-blog">
@@ -160,9 +167,9 @@
 						<img src="./images/blog2.jpg" alt="blog image">
 					</div>
 					<div class="single-blog__text">
-						<h4>The Journey Under the Waves</h4>
-						<span>On August 28, 2015</span>
-						<p>Quisque vel sapi nec lacus adipis cing bibendum nullam porta lites laoreet aliquam.velitest, tempus a ullamcorper et, lacinia mattis mi. Cras arcu nulla, blandit id cursus et, ultricies eu leo.</p>
+						<h4>Hypertext Transfer Protocol</h4>
+						<span>On November 23, 2020</span>
+						<p>The <b>Hypertext Transfer Protocol (HTTP)</b> is an application layer protocol for distributed, collaborative, hypermedia information systems. HTTP is a protocol which allows the fetching of resources.</p>
 					</div>
 				</div>
 				<div class="single-blog">
@@ -177,11 +184,11 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- Blog end -->
 
 	<!-- Quotes -->
-	<section class="fh5co-quotes">
+	<!-- <section class="fh5co-quotes" id="quotes">
 		<div class="site-container">
 			<div class="about-me-slider">
 				<div>
@@ -200,24 +207,24 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- Quotes end -->
 
 	<!-- Social -->
-	<section class="fh5co-social">
+	<!-- <section class="fh5co-social">
 		<div class="site-container">
 			<div class="social">
 				<h5>Contact me!!</h5>
 				<div class="social-icons">
-					<a href="www.instagram.com/javad.gheisarii" target="_blank"><img src="./images/social-instagram.png" alt="social icon"></a>
-					<a href="www.javad.gheisari@gmail.com" target="_blank"><img src="./images/social-email.png" alt="social icon"></a>
-					<a href="www.github.com/javadgheisari" target="_blank"><img src="./images/social-github.png" alt="social icon"></a>
-					<a href="t.me/mo_pro" target="_blank"><img src="./images/social-telegram.png" alt="social icon"></a>
+					<a href="../www.instagram.com/javad.gheisarii" target="_blank"><img src="./images/social-instagram.png" alt="social icon"></a>
+					<a href="../www.javad.gheisari@gmail.com" target="_blank"><img src="./images/social-email.png" alt="social icon"></a>
+					<a href="../www.github.com/javadgheisari" target="_blank"><img src="./images/social-github.png" alt="social icon"></a>
+					<a href="../t.me/mo_pro" target="_blank"><img src="./images/social-telegram.png" alt="social icon"></a>
 				</div>
 				<h5>Share it!</h5>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- Social -->
 
 	<!-- Footer -->
@@ -225,6 +232,8 @@
 		<div class="footer-bottom">
 			<div class="site-container footer-bottom-inner">
 				<p class>© Copyright | Design by <a href="https://javadgheisari.github.io/" target="_blank">javad gheisari</a> | All rights Reserved.</p>
+			<div class="footer-bottom__img">
+					<a href="#"><img src="./images/arrow-149-24.png" alt="footer image"></a>
 			</div>
 		</div>
 	</footer>
