again set url media

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
 	<nav class="site-navigation">
 		<div class="site-navigation-inner site-container">
             <div class="social-icons">
-                <a href="../www.instagram.com/javad.gheisarii" target="_blank"><img src="./images/social-instagram.png" alt="social icon"></a>
-                <a href="../www.javad.gheisari@gmail.com" target="_blank"><img src="./images/social-email.png" alt="social icon"></a>
-                <a href="../www.github.com/javadgheisari" target="_blank"><img src="./images/social-github.png" alt="social icon"></a>
-                <a href="../t.me/mo_pro" target="_blank"><img src="./images/social-telegram.png" alt="social icon"></a>
+                <a href="https://www.instagram.com/javad.gheisarii" target="_blank" rel="noopener"><img src="./images/social-instagram.png" alt="social icon"></a>
+                <a href="https://www.javad.gheisari@gmail.com" target="_blank" rel="noopener"><img src="./images/social-email.png" alt="social icon"></a>
+                <a href="https://www.github.com/javadgheisari" target="_blank" rel="noopener"><img src="./images/social-github.png" alt="social icon"></a>
+                <a href="https://t.me/mo_pro" target="_blank" rel="noopener"><img src="./images/social-telegram.png" alt="social icon"></a>
             </div>
 			<div class="main-navigation">
 				<ul class="main-navigation__ul">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="../https://atbox.io/javadgheisari/resume/pdf">My resume</a></li>
-					<li><a href="../https://medium.com/@javad.gheisarii">blog (english)</a></li>
-					<li><a href="../https://virgool.io/@javad.gheisarii">blog (persian)</a></li>
+					<li><a href="https://atbox.io/javadgheisari/resume/pdf" target="_blank" rel="noopener">My resume</a></li>
+					<li><a href="https://medium.com/@javad.gheisarii" target="_blank" rel="noopener">blog (english)</a></li>
+					<li><a href="https://virgool.io/@javad.gheisarii" target="_blank" rel="noopener">blog (persian)</a></li>
 					<!-- <li><a href="#about_me">About me</a></li> -->
 					<!-- <li><a href="#blog">Blog</a></li>
 					<li><a href="#quotes">Quotes</a></li> -->
@@ -67,7 +67,7 @@
 					<span class="brand-span">Web Developer, Trader</span>
 				</div>
 				<p>Never Give Up!</p>
-				<a href="../https://atbox.io/javadgheisari/resume/pdf" class="brand-button"> My Resume </a>
+				<a href="https://atbox.io/javadgheisari/resume/pdf" class="brand-button" rel="noopener"> My Resume </a>
 			</div>
 		</div>
 	</section>
@@ -105,8 +105,8 @@
 						<br>
 						<br>
 						<br>
-						<a href="../https://medium.com/@javad.gheisarii" class="brand-button"><br> English blog <br><br></a>
-						<a href="../https://virgool.io/@javad.gheisarii" class="brand-button"><br> Persian blog  <br><br></a>
+						<a href="https://medium.com/@javad.gheisarii" class="brand-button" rel="noopener"><br> English blog <br><br></a>
+						<a href="https://virgool.io/@javad.gheisarii" class="brand-button" rel="noopener"><br> Persian blog  <br><br></a>
 					</div>
 				</div>
 			</div>
