--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<link rel='shortcut icon' href="images/code-16.png">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/slick.css">
 	<title>Javad Gheisari</title>
@@ -67,7 +68,7 @@
 					<span class="brand-span">Web Developer, Trader</span>
 				</div>
 				<p>Never Give Up!</p>
-				<a href="https://atbox.io/javadgheisari/resume/pdf" class="brand-button" rel="noopener"> My Resume </a>
+				<a href="https://atbox.io/javadgheisari/resume/pdf" class="brand-button" target="_blank" rel="noopener"> My Resume </a>
 			</div>
 		</div>
 	</section>
@@ -105,8 +106,8 @@
 						<br>
 						<br>
 						<br>
-						<a href="https://medium.com/@javad.gheisarii" class="brand-button" rel="noopener"><br> English blog <br><br></a>
-						<a href="https://virgool.io/@javad.gheisarii" class="brand-button" rel="noopener"><br> Persian blog  <br><br></a>
+						<a href="https://medium.com/@javad.gheisarii" class="brand-button" target="_blank" rel="noopener"><br> English blog <br><br></a>
+						<a href="https://virgool.io/@javad.gheisarii" class="brand-button" target="_blank" rel="noopener"><br> Persian blog  <br><br></a>
 					</div>
 				</div>
 			</div>
