--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	<!-- Navigation end -->
 
 	<!-- Top banner -->
-	<section class="fh5co-top-banner">
+	<!-- <section class="fh5co-top-banner" style="height: 0;">
 		<div class="top-banner__inner site-container">
 			<div class="top-banner__image">
 				<img src="./images/top-banner-author.jpg" alt="author image">
@@ -71,7 +71,7 @@
 				<a href="https://atbox.io/javadgheisari/resume/pdf" class="brand-button" target="_blank" rel="noopener"> My Resume </a>
 			</div>
 		</div>
-	</section>
+	</section> -->
 	<!-- Top banner end -->
 
 	<!-- About me -->
@@ -79,14 +79,15 @@
 		<div class="about-me-inner site-container">
 			<article class="portfolio-wrapper">
 				<div class="portfolio__img">
-					<img src="./images/about-me.jpg" class="about-me__profile" alt="about me profile picture">
+					<img src="./images/Polish_20200820_182250125.jpg" class="about-me__profile" alt="about me profile picture">
 				</div>
 				<div class="portfolio__bottom">
 					<div class="portfolio__name">
 						<span>J</span>
 						<h2 class="universal-h2">avad Gheisari</h2>
 					</div>
-					<p>Computer Engineer from Iran.</p>
+					<p>Computer Engineer from Iran.</p><br>
+					<a href="https://atbox.io/javadgheisari/resume/pdf" class="brand-button" target="_blank" rel="noopener"> My Resume </a>
 				</div>
 			</article>
 			<div class="about-me__text">
@@ -98,7 +99,6 @@
 						<p>Focused on web development with django. Interested in blockchain and artificial intelligence.
 							<br>Python is my favorite language and I believe that anything can be done with Python :)</p>
 						<!-- <h4>Author</h4> -->
-						<!-- <p class="p-white">See me</p> -->
 					</div>
 					<div class="about-me-single-slide">
 						<h2 class="universal-h2 universal-h2-bckg">My blog</h2>
@@ -131,14 +131,14 @@
 				</div>
 			</div>
 			<div class="single-count">
-				<span class="count" data-count="36">0</span>
+				<span class="count" data-count="52">0</span>
 				<div class="single-count__text">
 					<img src="./images/counter-2.png" alt="counter icon">
 					<p>Trades</p>
 				</div>
 			</div>
 			<div class="single-count">
-				<span class="count" data-count="520">0</span>
+				<span class="count" data-count="600">0</span>
 				<div class="single-count__text">
 					<img src="./images/counter-3.png" alt="counter icon">
 					<p>Working hours</p>
@@ -232,7 +232,7 @@
 	<footer class="site-footer">
 		<div class="footer-bottom">
 			<div class="site-container footer-bottom-inner">
-				<p class>© Copyright | Design by <a href="https://javadgheisari.github.io/" target="_blank">javad gheisari</a> | All rights Reserved.</p>
+				<p class>© Design by <a href="#" target="_blank">javad gheisari</a></p>
 			<div class="footer-bottom__img">
 					<a href="#"><img src="./images/arrow-149-24.png" alt="footer image"></a>
 			</div>
