--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="css/slick.css">
 	<title>Javad Gheisari</title>
 </head>
-<body>
+<body style="background-color: black;">
 
 	<!-- Navigation -->
 	<nav class="site-navigation">
