--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 				<ul class="main-navigation__ul">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="https://atbox.io/javadgheisari/resume/pdf" target="_blank" rel="noopener">My resume</a></li>
-					<li><a href="https://medium.com/@javad.gheisarii" target="_blank" rel="noopener">blog (english)</a></li>
-					<li><a href="https://virgool.io/@javad.gheisarii" target="_blank" rel="noopener">blog (persian)</a></li>
+					<!-- <li><a href="https://medium.com/@javad.gheisarii" target="_blank" rel="noopener">blog (english)</a></li> -->
+					<li><a href="https://virgool.io/@javad.gheisarii" target="_blank" rel="noopener">My blog</a></li>
 					<!-- <li><a href="#about_me">About me</a></li> -->
 					<!-- <li><a href="#blog">Blog</a></li>
 					<li><a href="#quotes">Quotes</a></li> -->
@@ -87,7 +87,7 @@
 						<h2 class="universal-h2">avad Gheisari</h2>
 					</div>
 					<p>Computer Engineer from Iran.</p><br>
-					<a href="https://atbox.io/javadgheisari/resume/pdf" class="brand-button" target="_blank" rel="noopener"> My Resume </a>
+					<a href="https://atbox.io/javadgheisari/resume/pdf" class="brand-button resume-button" target="_blank" rel="noopener"> My Resume </a>
 				</div>
 			</article>
 			<div class="about-me__text">
@@ -106,8 +106,8 @@
 						<br>
 						<br>
 						<br>
-						<a href="https://medium.com/@javad.gheisarii" class="brand-button" target="_blank" rel="noopener"><br> English blog <br><br></a>
-						<a href="https://virgool.io/@javad.gheisarii" class="brand-button" target="_blank" rel="noopener"><br> Persian blog  <br><br></a>
+						<!-- <a href="https://medium.com/@javad.gheisarii" class="brand-button" target="_blank" rel="noopener"><br> English blog <br><br></a> -->
+						<a href="https://virgool.io/@javad.gheisarii" target="_blank" rel="noopener" class="social-icons"><img src="./images/literature-64.png"></a>
 					</div>
 				</div>
 			</div>
